Gemaakt met Colaboratory

--- a/date_dim1.ipynb
+++ b/date_dim1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2YTyzAXVWAuylv5OFeupw",
+      "authorship_tag": "ABX9TyO1mKS7GsiqlXjJFV66mqDy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 48,
       "metadata": {
         "id": "o3YS_6l8pthD"
       },
@@ -69,6 +69,11 @@
         "    dates['Quarter'] = dates.index.quarter\n",
         "    dates['Year_half'] = dates.index.month.map(lambda mth: 1 if mth <7 else 2)\n",
         "    dates['Year'] = dates.index.year\n",
+        "    if dates.index.dayofweek.map(days_names.get)== 'Monday':\n",
+        "      dates['weekend'] = 'Y'\n",
+        "    else:\n",
+        "      dates['weekend'] = 'N'\n",
+        "\n",
         "    dates.reset_index(inplace=True)\n",
         "    dates.index.name = 'date_id'\n",
         "    return dates"
@@ -80,10 +85,28 @@
         "df = create_date_table()"
       ],
       "metadata": {
-        "id": "AbIihUohpzHS"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 287
+        },
+        "id": "AbIihUohpzHS",
+        "outputId": "387618f3-aec3-4238-ca1d-92faa0b5524b"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-49-b684240aff8f>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_date_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-48-19f940cc8ce4>\u001b[0m in \u001b[0;36mcreate_date_table\u001b[0;34m(start, end)\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mdates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Year_half'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mmth\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mmth\u001b[0m \u001b[0;34m<\u001b[0m\u001b[0;36m7\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mdates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Year'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdayofweek\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays_names\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'Monday'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m       \u001b[0mdates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'weekend'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Y'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -91,12 +114,12 @@
         "df"
       ],
       "metadata": {
-        "id": "z1rVNH-pSPzm",
-        "outputId": "be79df49-59d5-401a-cd6c-426743873810",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
-        }
+        },
+        "id": "z1rVNH-pSPzm",
+        "outputId": "be79df49-59d5-401a-cd6c-426743873810"
       },
       "execution_count": 14,
       "outputs": [
@@ -401,15 +424,19 @@
       "cell_type": "code",
       "source": [
         "feestdag = []\n",
+        "weekend = []\n",
         "for index, row in df.iterrows():\n",
-        "  a = row['Date'] in nl_holidays\n",
-        "  feestdag.append(a)\n",
-        "df['feestdag'] = feestdag"
+        "  f = row['Date'] in nl_holidays\n",
+        "  feestdag.append(f)\n",
+        "  w = row['Date'] in nl_holidays.weekend\n",
+        "  weekend.append(w)\n",
+        "df['feestdag'] = feestdag\n",
+        "df['weekend'] = weekend\n"
       ],
       "metadata": {
         "id": "0-0HqxtPTe1c"
       },
-      "execution_count": 37,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -418,14 +445,14 @@
         "df"
       ],
       "metadata": {
-        "id": "pnLrq7k_QbjI",
-        "outputId": "37b98327-cbf0-4c0e-dac4-71065ad44c5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
-        }
+        },
+        "id": "pnLrq7k_QbjI",
+        "outputId": "f95fcace-d812-40c7-b11d-51dec3d0b9b9"
       },
-      "execution_count": 38,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,25 +472,25 @@
               "363     2022-12-30              NaN     Friday    52     12        4   \n",
               "364     2022-12-31              NaN   Saturday    52     12        4   \n",
               "\n",
-              "         Year_half  Year  feestdag  \n",
-              "date_id                             \n",
-              "0                1  2022      True  \n",
-              "1                1  2022     False  \n",
-              "2                1  2022     False  \n",
-              "3                1  2022     False  \n",
-              "4                1  2022     False  \n",
-              "...            ...   ...       ...  \n",
-              "360              2  2022     False  \n",
-              "361              2  2022     False  \n",
-              "362              2  2022     False  \n",
-              "363              2  2022     False  \n",
-              "364              2  2022     False  \n",
+              "         Year_half  Year  feestdag  weekend  \n",
+              "date_id                                      \n",
+              "0                1  2022      True    False  \n",
+              "1                1  2022     False    False  \n",
+              "2                1  2022     False    False  \n",
+              "3                1  2022     False    False  \n",
+              "4                1  2022     False    False  \n",
+              "...            ...   ...       ...      ...  \n",
+              "360              2  2022     False    False  \n",
+              "361              2  2022     False    False  \n",
+              "362              2  2022     False    False  \n",
+              "363              2  2022     False    False  \n",
+              "364              2  2022     False    False  \n",
               "\n",
-              "[365 rows x 9 columns]"
+              "[365 rows x 10 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7916c20e-a662-4a68-a892-6e938fc3f842\">\n",
+              "  <div id=\"df-49bbcc26-09a9-4522-baca-ee651556edc6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -492,9 +519,11 @@
               "      <th>Year_half</th>\n",
               "      <th>Year</th>\n",
               "      <th>feestdag</th>\n",
+              "      <th>weekend</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>date_id</th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
@@ -518,6 +547,7 @@
               "      <td>1</td>\n",
               "      <td>2022</td>\n",
               "      <td>True</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -529,6 +559,7 @@
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>2022</td>\n",
+              "      <td>False</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -542,6 +573,7 @@
               "      <td>1</td>\n",
               "      <td>2022</td>\n",
               "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -553,6 +585,7 @@
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>2022</td>\n",
+              "      <td>False</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -566,9 +599,11 @@
               "      <td>1</td>\n",
               "      <td>2022</td>\n",
               "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -590,6 +625,7 @@
               "      <td>2</td>\n",
               "      <td>2022</td>\n",
               "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>361</th>\n",
@@ -601,6 +637,7 @@
               "      <td>4</td>\n",
               "      <td>2</td>\n",
               "      <td>2022</td>\n",
+              "      <td>False</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -614,6 +651,7 @@
               "      <td>2</td>\n",
               "      <td>2022</td>\n",
               "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>363</th>\n",
@@ -625,6 +663,7 @@
               "      <td>4</td>\n",
               "      <td>2</td>\n",
               "      <td>2022</td>\n",
+              "      <td>False</td>\n",
               "      <td>False</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -638,12 +677,13 @@
               "      <td>2</td>\n",
               "      <td>2022</td>\n",
               "      <td>False</td>\n",
+              "      <td>False</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>365 rows × 9 columns</p>\n",
+              "<p>365 rows × 10 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7916c20e-a662-4a68-a892-6e938fc3f842')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49bbcc26-09a9-4522-baca-ee651556edc6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -694,12 +734,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7916c20e-a662-4a68-a892-6e938fc3f842 button.colab-df-convert');\n",
+              "          document.querySelector('#df-49bbcc26-09a9-4522-baca-ee651556edc6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7916c20e-a662-4a68-a892-6e938fc3f842');\n",
+              "          const element = document.querySelector('#df-49bbcc26-09a9-4522-baca-ee651556edc6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -722,7 +762,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 42
         }
       ]
     },
