Gemaakt met Colaboratory

--- a/date_dim1.ipynb
+++ b/date_dim1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2PPpHbsapS0u3POO/+NdJ",
+      "authorship_tag": "ABX9TyNWv7BGRCtOoDY8EMG69T0C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,12 +79,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df = create_date_table()"
+        "df = create_date_table(start='2023-01-01', end='2023-12-31')"
       ],
       "metadata": {
         "id": "AbIihUohpzHS"
       },
-      "execution_count": 88,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -98,9 +98,9 @@
           "height": 455
         },
         "id": "z1rVNH-pSPzm",
-        "outputId": "690f3f39-4679-459f-9591-227926f1add5"
+        "outputId": "5f2bfad4-b9e2-4539-9426-643df3b88714"
       },
-      "execution_count": 89,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -108,38 +108,38 @@
             "text/plain": [
               "              Datum Record_timestamp        Dag  Week  Maand  Kwartaal  \\\n",
               "datum_id                                                                 \n",
-              "0        2022-01-01       2023-07-12   zaterdag    52      1         1   \n",
-              "1        2022-01-02       2023-07-12     zondag    52      1         1   \n",
-              "2        2022-01-03       2023-07-12    maandag     1      1         1   \n",
-              "3        2022-01-04       2023-07-12    dinsdag     1      1         1   \n",
-              "4        2022-01-05       2023-07-12   woensdag     1      1         1   \n",
+              "0        2023-01-01       2023-07-12     zondag    52      1         1   \n",
+              "1        2023-01-02       2023-07-12    maandag     1      1         1   \n",
+              "2        2023-01-03       2023-07-12    dinsdag     1      1         1   \n",
+              "3        2023-01-04       2023-07-12   woensdag     1      1         1   \n",
+              "4        2023-01-05       2023-07-12  donderdag     1      1         1   \n",
               "...             ...              ...        ...   ...    ...       ...   \n",
-              "360      2022-12-27       2023-07-12    dinsdag    52     12         4   \n",
-              "361      2022-12-28       2023-07-12   woensdag    52     12         4   \n",
-              "362      2022-12-29       2023-07-12  donderdag    52     12         4   \n",
-              "363      2022-12-30       2023-07-12    vrijdag    52     12         4   \n",
-              "364      2022-12-31       2023-07-12   zaterdag    52     12         4   \n",
+              "360      2023-12-27       2023-07-12   woensdag    52     12         4   \n",
+              "361      2023-12-28       2023-07-12  donderdag    52     12         4   \n",
+              "362      2023-12-29       2023-07-12    vrijdag    52     12         4   \n",
+              "363      2023-12-30       2023-07-12   zaterdag    52     12         4   \n",
+              "364      2023-12-31       2023-07-12     zondag    52     12         4   \n",
               "\n",
               "          Halfjaar  Jaar Weekend  \n",
               "datum_id                          \n",
-              "0                1  2022      Ja  \n",
-              "1                1  2022      Ja  \n",
-              "2                1  2022     Nee  \n",
-              "3                1  2022     Nee  \n",
-              "4                1  2022     Nee  \n",
+              "0                1  2023      Ja  \n",
+              "1                1  2023     Nee  \n",
+              "2                1  2023     Nee  \n",
+              "3                1  2023     Nee  \n",
+              "4                1  2023     Nee  \n",
               "...            ...   ...     ...  \n",
-              "360              2  2022     Nee  \n",
-              "361              2  2022     Nee  \n",
-              "362              2  2022     Nee  \n",
-              "363              2  2022     Nee  \n",
-              "364              2  2022      Ja  \n",
+              "360              2  2023     Nee  \n",
+              "361              2  2023     Nee  \n",
+              "362              2  2023     Nee  \n",
+              "363              2  2023      Ja  \n",
+              "364              2  2023      Ja  \n",
               "\n",
               "[365 rows x 9 columns]"
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-95c37d9f-007f-448e-b78b-97d4d22b592a\">\n",
+              "  <div id=\"df-d176583b-01c8-448e-af99-a8bf11fa4bda\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -185,62 +185,62 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2022-01-01</td>\n",
-              "      <td>2023-07-12</td>\n",
-              "      <td>zaterdag</td>\n",
-              "      <td>52</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2022</td>\n",
-              "      <td>Ja</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2022-01-02</td>\n",
+              "      <td>2023-01-01</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>zondag</td>\n",
               "      <td>52</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Ja</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2022-01-03</td>\n",
+              "      <th>1</th>\n",
+              "      <td>2023-01-02</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>maandag</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Nee</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2022-01-04</td>\n",
+              "      <th>2</th>\n",
+              "      <td>2023-01-03</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>dinsdag</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Nee</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2022-01-05</td>\n",
+              "      <th>3</th>\n",
+              "      <td>2023-01-04</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>woensdag</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
+              "      <td>Nee</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2023-01-05</td>\n",
+              "      <td>2023-07-12</td>\n",
+              "      <td>donderdag</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Nee</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -257,69 +257,69 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>360</th>\n",
-              "      <td>2022-12-27</td>\n",
-              "      <td>2023-07-12</td>\n",
-              "      <td>dinsdag</td>\n",
-              "      <td>52</td>\n",
-              "      <td>12</td>\n",
-              "      <td>4</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2022</td>\n",
-              "      <td>Nee</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>361</th>\n",
-              "      <td>2022-12-28</td>\n",
+              "      <td>2023-12-27</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>woensdag</td>\n",
               "      <td>52</td>\n",
               "      <td>12</td>\n",
               "      <td>4</td>\n",
               "      <td>2</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Nee</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>362</th>\n",
-              "      <td>2022-12-29</td>\n",
+              "      <th>361</th>\n",
+              "      <td>2023-12-28</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>donderdag</td>\n",
               "      <td>52</td>\n",
               "      <td>12</td>\n",
               "      <td>4</td>\n",
               "      <td>2</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Nee</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>363</th>\n",
-              "      <td>2022-12-30</td>\n",
+              "      <th>362</th>\n",
+              "      <td>2023-12-29</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>vrijdag</td>\n",
               "      <td>52</td>\n",
               "      <td>12</td>\n",
               "      <td>4</td>\n",
               "      <td>2</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Nee</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>364</th>\n",
-              "      <td>2022-12-31</td>\n",
+              "      <th>363</th>\n",
+              "      <td>2023-12-30</td>\n",
               "      <td>2023-07-12</td>\n",
               "      <td>zaterdag</td>\n",
               "      <td>52</td>\n",
               "      <td>12</td>\n",
               "      <td>4</td>\n",
               "      <td>2</td>\n",
-              "      <td>2022</td>\n",
+              "      <td>2023</td>\n",
+              "      <td>Ja</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>364</th>\n",
+              "      <td>2023-12-31</td>\n",
+              "      <td>2023-07-12</td>\n",
+              "      <td>zondag</td>\n",
+              "      <td>52</td>\n",
+              "      <td>12</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2023</td>\n",
               "      <td>Ja</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "<p>365 rows × 9 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-95c37d9f-007f-448e-b78b-97d4d22b592a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d176583b-01c8-448e-af99-a8bf11fa4bda')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -332,8 +332,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-074acfe0-606f-4531-822a-23d7a290da03\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-074acfe0-606f-4531-822a-23d7a290da03')\"\n",
+              "    <div id=\"df-d62fef5b-c2f1-447a-ab10-06f5d071e4dc\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d62fef5b-c2f1-447a-ab10-06f5d071e4dc')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -390,7 +390,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-074acfe0-606f-4531-822a-23d7a290da03 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-d62fef5b-c2f1-447a-ab10-06f5d071e4dc button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -437,12 +437,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-95c37d9f-007f-448e-b78b-97d4d22b592a button.colab-df-convert');\n",
+              "          document.querySelector('#df-d176583b-01c8-448e-af99-a8bf11fa4bda button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-95c37d9f-007f-448e-b78b-97d4d22b592a');\n",
+              "          const element = document.querySelector('#df-d176583b-01c8-448e-af99-a8bf11fa4bda');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -464,7 +464,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 92
         }
       ]
     },
@@ -824,15 +824,6 @@
           "execution_count": 42
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "AHrG9dxhVj44"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
